<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">openstack for android</string>
    <string name="back">back</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Referenzimplementation</string>
    <string name="tokenIntroduction">Wir konnten leider ihr Gerät nicht automatisch identifizieren (WLAN?).</string>
    <string name="pleaseInsertToken">    Sie erhalten jetzt ein SMS mit einer Kennzahl, die Sie bitte unten eingeben wollen. 
    Danke.</string>
    <string name="error_dlg">Fehlermeldung</string>
    <string name="purchaseIntroduction">Sie können diesen Service kaufen und direkt über Ihre Telefonrechnung bezahlen. Sie werden den Betrag unter der Position Easypay finden.</string>
    <string name="manageIntroduction">Sie können diesen Service löschen oder ihren Account komplett entfernen.</string>
    <string name="easypay">Das Abo verlängert sich automatisch, falls es nicht gekündigt wird. Kündigung jederzeit möglich bei testPartner7 oder im Swisscom <a href="http://www.swisscom.ch/kundencenter">Kundencenter</a></string>
    <string name="easypay_trial">Das Trial Abo verlängert sich automatisch, falls es nicht gekündigt wird. Kündigung jederzeit möglich bei testPartner7 oder im Swisscom <a href="http://www.swisscom.ch/kundencenter">Kundencenter</a></string>
    <string name="easypay_non_recurrent">Einsicht in Transaktionen im Swisscom <a href="http://www.swisscom.ch/kundencenter">Kundencenter</a></string>
    <string name="showServices">Show Services</string>
    <string name="manageSubscriptions">Manage Subscriptions</string>
    <string name="editSettings">Settings</string>
    <string name="easypay_login">Die Anmeldung wird während max. 30 Minuten bei Inaktivität gültig bleiben, danach müssen Sie sich ggf. neu anmelden.</string>
    <string name="default_msisdn">41796984219</string>
    <string name="purchaseTokenIntroduction">Es wurde eine Buchung auf Ihre Telefonrechnung angefordert.</string>
    <string name="purchasePleaseInsertToken">Falls Sie diese Belastung erlauben wollen, geben Sie bitte die Kennzahl ein, die Sie per SMS erhalten haben.</string>
    <string name="purchaseEasypay">Bitte entnehmen Sie die Details des Kaufes dem SMS.</string>

    <color name="red">#ff0000</color>
    <color name="green">#00ff00</color>
    <color name="blue">#000080</color>
    <color name="yellow">#FFA500</color>
    <color name="white">#FFFFFF</color>
    

    <string name="FULLNAME">fullname</string>
	<string name="EMAIL">email</string>
	<string name="USERID">userid</string>
	<string name="USERNAME">username</string>
	<string name="PASSWORD">password</string>
	<string name="TENANT_NAME">tenantName</string>
	<string name="TENANT_ID">tenantId</string>
	<string name="KEYSTONE_AUTH_URL">keystoneAuthUrl</string>
	<string name="KEYSTONE_ADMIN_AUTH_URL">keystoneAdminAuthUrl</string>
	<string name="KEYSTONE_ENDPOINT">keystoneEndpoint</string>
	<string name="NOVA_ENDPOINT">novaEndpoint</string>
	<string name="CEILOMETER_ENDPOINT">ceilometerEndpoint</string>
	<string name="SIGNUP_ENDPOINT">signupEndpoint</string>
	<string name="LOCAL_STORAGE">localStoraget</string>
	<string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="lbl_container_name">Please enter new top folder name</string>
    <string name="lbl_folder_name">Please enter new folder name</string> 
    <string name="type_selection_label">Please select type to add</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="image">Image</string>
    <string name="camera">Take a picture</string>
    <string name="username">Username</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_wait">Please check your mail account and confirm on clicking the link before pressing login</string>   
    

</resources>